[package]
name = "html-to-pulldown-cmark-events"
version = "0.1.8"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/pindash-io"
documentation = "https://docs.rs/html-to-pulldown-cmark-events"
repository = "https://github.com/pindash-io/html-to-pulldown-cmark-events"
description = "Parse HTML to pulldown-cmark's events"

[dependencies]
atoi = "2.0.0"
ego-tree = "0.6.2"
pulldown-cmark = "0.9.2"
scraper = { version = "0.15.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.69"
